candle-einops-macros/tests/ui/fail/duplicate-reduced-ellipsis.stderr
error: Ellipsis `..` appears more than once on the left
 --> tests/ui/fail/duplicate-reduced-ellipsis.rs:4:21
  |
4 |     let _ = einops!("sum(.. ..) ->", ());
  |                     ^^^^^^^^^^^^^^^
